@@ -32,7 +32,7 @@
 
 
 KSpreadreplace::KSpreadreplace( KSpreadView* parent, const char* name,const QPoint &_marker)
-	: QDialog( parent, name )
+	: QDialog( parent, name,TRUE )
 {
   m_pView = parent;
   marker= _marker;
